# Laboratory-III-Notes

./: .gitignore  README.md  repasos.md
01-workingFramework/: 01-productor.c  04-consumidor2.c  archivos.c  define.h  elBanco.c  example_02.c  makefile  mensajes.txt  pensador  pienso_un_numero_jugadores.c  thread.c  thread.h
03 - Heredado/Segundo Parcial/2024-01/recuperatorio_2/: CMakeLists.txt  Makefile  README.md  aleatorios.c  aleatorios.h  archivos.c  archivos.h  cancha  cancha.c  claves_ipc.c  claves_ipc.h  colas.c  colas.h  defs.h  jugadores  jugadores.c  memoria.c  memoria.h  semaforos.c  semaforos.h  thread.c  thread.h  utils.c  utils.h
FrameworkFuncionando/: 01-productor.c  01-productor2.c  clave.c  define.h  global.c  makefile  memoria.c  menus.txt  readme.txt
FrameworkUsadoEn1erParcial/: 01-productor.c  02-consumidor.c  define.h  funciones.c  funciones.h  semaforos.c
clase_02/: Notas.md  archivos.c  archivos.h  funciones.c  funciones.h  global.c  global.h  main.c  makefile  prog1
clase_03/: Notes.md
clase_04/: notes.md
clase_05/: notes.md
clase_08/: notes.md
clase_09/: ejemplo_1  ejemplo_1.c  notes.md  numeros_primos.c
experiments/: hola  hola.c
framework/: 01-productor.c  01-semaforo_productor.c  02-consumidor.c  02-semaforo_consumidor.c  archivos.c  archivos.h  clave.c  consumidor_con_semaforo.c  define.h  main.c  main_antes_ejemplo.c  makefile  memoria.c  memoria.h  memoria_consumidor_2.c  memoria_productor.c  memoria_productor_2.c  productor_con_semaforo.c  prueba.txt  semaforos.c
my_notes/: hola.c  holaggdb
workingFramework/: banco  (+31 more)
(+588 files in other folders)
